Adicionando tela para cadastrar voluntario

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -33,7 +33,7 @@
 					icon="ui-icon-star">
 				</p:button>
 
-				<p:button outcome="login.xhtml" value="Cadastrar voluntario"
+				<p:button outcome="/sistema/cadastrarVoluntario.xhtml" value="Cadastrar voluntario"
 					icon="ui-icon-star">
 				</p:button>
 
