--- a/src/main/webapp/sistema/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/sistema/cadastrarVoluntario.xhtml
@@ -28,7 +28,7 @@
  
 	            		<p:outputLabel for="selectOneRadio-sexo" value="Sexo:" />
         				<p:selectOneRadio id="selectOneRadio-sexo" 
-        						  value="#{ccadastrarVoluntarioController.voluntarioModel.sexo}"
+        						  value="#{cadastrarVoluntarioController.voluntarioModel.sexo}"
         						  required="true"
 	            				     	  requiredMessage="O sexo é de preenchimento obrigatório">
  
@@ -58,7 +58,7 @@
 	            		<p:commandButton value="Salvar" 
 	            				 id="commandButton-salvar"
 						 icon="ui-icon-gear"
-						 actionListener="#{cadastrarVoluntarioController.SalvarNovoVoluntario}"
+						 actionListener="#{cadastrarVoluntarioController.salvarNovoVoluntario}"
 						 update="panelGrid-campos-form"/>
  
  
