--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,9 +14,10 @@
 </h:head>
 
 <!--
-<h:body style="display:flex; background: url('resources/imagens/index.png') no-repeat;">
--->
 <h:body style="display:flex;">
+
+-->
+<h:body style="display:flex; background-image: url('resources/imagens/background.jpg') ; background-size: 100% 100%">
 
 	<h:form style=" margin:auto;">
 
@@ -33,7 +34,7 @@
 					icon="ui-icon-star">
 				</p:button>
 
-				<p:button outcome="/sistema/cadastrarVoluntario.xhtml" value="Cadastrar voluntario"
+				<p:button outcome="cadastrarVoluntario.xhtml" value="Cadastrar voluntario"
 					icon="ui-icon-star">
 				</p:button>
 
