--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -11,7 +11,7 @@
 		<h:outputStylesheet library="css" name="default.css"/>
 	</h:head>
  
-	<h:body style="display:flex;">
+	<h:body style="display:flex; background-image: url('resources/imagens/background.jpg') ; background-size: 100% 100%">
 
 		<h:form style=" margin:auto;">
  
