--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -14,16 +14,16 @@
 
 <h:body
 	style="display:flex; background-image: url('resources/imagens/background.jpg') ; background-size: 100% 100%">
-
-	 <div position="north" >  
+<div  style="margin: 0 auto; width: 50%;">
+	 <h:head position="north" >  
 		<p:graphicImage url="/resources/imagens/banner.jpg" />
-     </div>
+     </h:head >
 
 	<div style="padding-top: 10%;">
 		<h:form>
 			<p:growl id="growl-mensagem" showDetail="true" sticky="true" />
 			<p:panel id="panel-login-principal" header="Help The Next"
-				style="width:400px;">
+				style="margin: 0 auto; width: 90%;">
  
  				Selecione uma das opções abaixo: 
  				&nbsp;
@@ -46,6 +46,6 @@
 			</p:panel>
 		</h:form>
 	</div>
-
+</div>
 </h:body>
 </html>
