Validando tipo de perfil Layout especifico pra cada tipo Persistindo dados cadastro voluntario Correções diversas

--- a/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
@@ -10,10 +10,10 @@
 <h:head>
 </h:head>
 
-<ui:composition template="/template/layoutBase.xhtml">
+<ui:composition template="/template/Voluntario/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Cadastro de Obejtos para Doação">
+			<p:tab title="Cadastro de Objeto para Doação">
 
 				<h:form id="form-cadastro">
 
