--- a/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
@@ -10,7 +10,7 @@
 <h:head>
 </h:head>
 
-<ui:composition template="/template/layoutBase.xhtml">
+<ui:composition template="/template/ONG/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Cadastro de Eventos Beneficientes">
