--- a/src/main/webapp/sistema/Voluntario/home.xhtml
+++ b/src/main/webapp/sistema/Voluntario/home.xhtml
@@ -7,7 +7,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
  
  
-<ui:composition template="/template/layoutBase.xhtml">
+<ui:composition template="/template/Voluntario/layoutBase.xhtml">
  
 	<ui:define name="content">
  
