Arrumando mapeamento JPA Arrumando persistencia dos dados

--- a/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
@@ -17,7 +17,8 @@
 
 				<h:form id="form-cadastro-evento">
 
-					<h:panelGrid id="panelGrid-campos-form" columns="2" cellpadding="10">
+					<h:panelGrid id="panelGrid-campos-form" columns="2"
+						cellpadding="10">
 
 						<p:outputLabel value="Titulo do evento" for="inputText-titulo" />
 						<p:inputText id="inputText-titulo" style="width:100%"
@@ -47,10 +48,9 @@
 							requiredMessage="O campo local é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Data/Hora do evento" for="inputText-horario" />
-						 <p:calendar pattern="MM/dd/yyyy HH:mm:ss" 
-						 id="inputText-horario" style="width:100%"
-							maxlength="80" value="#{eventoController.eventoModel.dataHora}"
-							required="true"
+						<p:calendar pattern="MM/dd/yyyy HH:mm:ss" id="inputText-horario"
+							style="width:100%" maxlength="80"
+							value="#{eventoController.eventoModel.dataHora}" required="true"
 							requiredMessage="O campo horario é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Email" for="inputText-email" />
@@ -67,27 +67,26 @@
 						</h:form>
 
 						<p:outputLabel value="Causas" />
-						<h:form>
+						<p:selectManyCheckbox id="basic"
+							value="#{eventoController.eventoModel.causas}" layout="grid"
+							columns="3">
+							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
+							<f:selectItem itemLabel="Saude" itemValue="1" />
+							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
+							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
+							<f:selectItem itemLabel="Idosos" itemValue="5" />
+							<f:selectItem itemLabel="Educação" itemValue="6" />
+							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
+								itemValue="8" />
+							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
+							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
+							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
+							<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
+							<f:selectItem itemLabel="Outras" itemValue="13" />
+						</p:selectManyCheckbox>
 
-							<p:selectManyCheckbox id="basic"
-								value="#{eventoController.selectedConsoles}" layout="grid"
-								columns="3">
-								<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-								<f:selectItem itemLabel="Saude" itemValue="1" />
-								<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-								<f:selectItem itemLabel="Participação cidada" itemValue="3" />
-								<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
-								<f:selectItem itemLabel="Idosos" itemValue="5" />
-								<f:selectItem itemLabel="Educação" itemValue="6" />
-								<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-								<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
-								<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
-								<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
-								<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
-								<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
-								<f:selectItem itemLabel="Outras" itemValue="13" />
-							</p:selectManyCheckbox>
-						</h:form>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
 							icon="ui-icon-gear"
@@ -96,7 +95,8 @@
 
 					</h:panelGrid>
 
-					<p:messages showDetail="true" autoUpdate="true" closable="true" severity="warn" />
+					<p:messages showDetail="true" autoUpdate="true" closable="true"
+						severity="warn" />
 					<p:messages autoUpdate="true" closable="true" severity="error" />
 					<p:messages showDetail="true" autoUpdate="true" closable="true"
 						severity="info" />
