--- a/src/main/webapp/cadastrarVoluntario.xhtml
+++ b/src/main/webapp/cadastrarVoluntario.xhtml
@@ -41,20 +41,20 @@
 						<p:inputText id="inputText-nome" style="width:90%" maxlength="70"
 							value="#{voluntarioController.voluntarioModel.nome}"
 							required="true"
-							requiredMessage="O nome é de preenchimento obrigatório" />
+							requiredMessage="O campo nome é de preenchimento obrigatório" />
 
 						<p:outputLabel value="Sobrenome" for="inputText-sobrenome" />
 						<p:inputText id="inputText-sobrenome" style="width:90%"
 							maxlength="70"
 							value="#{voluntarioController.voluntarioModel.sobrenome}"
 							required="true"
-							requiredMessage="O Sobrenome é de preenchimento obrigatório" />
+							requiredMessage="O campo sobrenome é de preenchimento obrigatório" />
 
 						<p:outputLabel for="selectOneRadio-sexo" value="Sexo:" />
 						<p:selectOneRadio id="selectOneRadio-sexo"
 							value="#{voluntarioController.voluntarioModel.sexo}"
 							required="true"
-							requiredMessage="O sexo é de preenchimento obrigatório">
+							requiredMessage="O campo sexo é de preenchimento obrigatório">
 
 							<f:selectItem itemLabel="Masculino" itemValue="M" />
 							<f:selectItem itemLabel="Feminino" itemValue="F" />
@@ -73,8 +73,9 @@
 
 						<p:outputLabel value="Data de Nascimento"
 							for="inputText-nascimento" />
-							<p:calendar id="inputText-nascimento"  style="width:100%"
-							maxlength="80" 	value="#{voluntarioController.voluntarioModel.email}"
+						<p:calendar id="inputText-nascimento" style="width:100%"
+							maxlength="80"
+							value="#{voluntarioController.voluntarioModel.dataNascimento}"
 							required="true"
 							requiredMessage="O campo data de Nascimento é de preenchimento obrigatório" />
 
@@ -146,89 +147,76 @@
 						<p:outputLabel value="Foto de Perfil" />
 						<h:form enctype="multipart/form-data">
 							<p:growl id="messages" showDetail="true" />
-							<p:fileUpload value="#{fileUploadView.file}" mode="simple" label="Escolher"
+							<p:fileUpload value="#{fileUploadView.file}" mode="simple"
 								skinSimple="true" />
 						</h:form>
-
 						<p:separator />
 						<br />
 
-						<p:outputLabel value="Causas" />
-						<h:form>
-
-							<p:selectManyCheckbox id="basic"
-								value="#{voluntarioController.selectedConsoles}" layout="grid"
-								columns="3">
-								<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
-								<f:selectItem itemLabel="Saude" itemValue="1" />
-								<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
-								<f:selectItem itemLabel="Participação cidada" itemValue="3" />
-								<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
-								<f:selectItem itemLabel="Idosos" itemValue="5" />
-								<f:selectItem itemLabel="Educação" itemValue="6" />
-								<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-								<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
-									itemValue="8" />
-								<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
-								<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
-								<f:selectItem itemLabel="Capacitação Profissional"
-									itemValue="11" />
-								<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
-								<f:selectItem itemLabel="Outras" itemValue="13" />
-							</p:selectManyCheckbox>
-						</h:form>
-
+						<p:outputLabel value="Causas" for="causas" />
+						<p:selectManyCheckbox id="causas"
+							value="#{voluntarioController.voluntarioModel.causas}"
+							layout="grid" columns="3">
+							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
+							<f:selectItem itemLabel="Saude" itemValue="1" />
+							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
+							<f:selectItem itemLabel="Participação cidada" itemValue="3" />
+							<f:selectItem itemLabel="Meio Ambiente" itemValue="4" />
+							<f:selectItem itemLabel="Idosos" itemValue="5" />
+							<f:selectItem itemLabel="Educação" itemValue="6" />
+							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
+								itemValue="8" />
+							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
+							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
+							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
+							<f:selectItem itemLabel="Combate à pobreza" itemValue="12" />
+							<f:selectItem itemLabel="Outras" itemValue="13" />
+						</p:selectManyCheckbox>
 						<p:separator />
 						<br />
 
-						<p:outputLabel value="Habilidades" />
-						<h:form>
-							<p:selectManyCheckbox id="basic"
-								value="#{voluntarioController.selectedConsoles}" layout="grid"
-								columns="3">
-								<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
-								<f:selectItem itemLabel="Comunicação" itemValue="1" />
-								<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
-								<f:selectItem itemLabel="Direito" itemValue="3" />
-								<f:selectItem itemLabel="Educação" itemValue="4" />
-								<f:selectItem itemLabel="Esportes" itemValue="5" />
-								<f:selectItem itemLabel="Gastronomia" itemValue="6" />
-								<f:selectItem itemLabel="Gestão" itemValue="7" />
-								<f:selectItem itemLabel="Idiomas" itemValue="8" />
-								<f:selectItem itemLabel="Informatica/Eletronica" itemValue="9" />
-								<f:selectItem itemLabel="Saude/Psicologia" itemValue="10" />
-								<f:selectItem itemLabel="Outras" itemValue="11" />
-							</p:selectManyCheckbox>
-						</h:form>
+						<p:outputLabel value="Habilidades" for="habilidades" />
+						<p:selectManyCheckbox id="habilidades"
+							value="#{voluntarioController.voluntarioModel.habilidades}"
+							layout="grid" columns="3">
+							<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
+							<f:selectItem itemLabel="Comunicação" itemValue="1" />
+							<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
+							<f:selectItem itemLabel="Direito" itemValue="3" />
+							<f:selectItem itemLabel="Educação" itemValue="4" />
+							<f:selectItem itemLabel="Esportes" itemValue="5" />
+							<f:selectItem itemLabel="Gastronomia" itemValue="6" />
+							<f:selectItem itemLabel="Gestão" itemValue="7" />
+							<f:selectItem itemLabel="Idiomas" itemValue="8" />
+							<f:selectItem itemLabel="Informatica/Eletronica" itemValue="9" />
+							<f:selectItem itemLabel="Saude/Psicologia" itemValue="10" />
+							<f:selectItem itemLabel="Outras" itemValue="11" />
+						</p:selectManyCheckbox>
 
 						<p:separator />
 						<br />
 
 						<p:outputLabel value="Disponibilidade:" />
-						<h:form>
-							<p:selectManyCheckbox id="basic"
-								value="#{voluntarioController.selectedConsoles}" layout="grid"
-								columns="3">
-								<f:selectItem itemLabel="Segunda-Feira" itemValue="0" />
-								<f:selectItem itemLabel="Terça-Feira" itemValue="1" />
-								<f:selectItem itemLabel="Quarta-Feira" itemValue="2" />
-								<f:selectItem itemLabel="Quinta-Feira" itemValue="3" />
-								<f:selectItem itemLabel="Sexta-Feira" itemValue="4" />
-								<f:selectItem itemLabel="Sabado" itemValue="5" />
-								<f:selectItem itemLabel="Domingo" itemValue="5" />
-							</p:selectManyCheckbox>
-						</h:form>
+						<br />
+						<p:selectManyCheckbox id="dias" layout="grid" columns="1"
+							value="#{voluntarioController.voluntarioModel.disponibilidadeDias}">
+							<f:selectItem itemLabel="Segunda-Feira" itemValue="1" />
+							<f:selectItem itemLabel="Terça-Feira" itemValue="2" />
+							<f:selectItem itemLabel="Quarta-Feira" itemValue="3" />
+							<f:selectItem itemLabel="Quinta-Feira" itemValue="4" />
+							<f:selectItem itemLabel="Sexta-Feira" itemValue="5" />
+							<f:selectItem itemLabel="Sabado" itemValue="6" />
+							<f:selectItem itemLabel="Domingo" itemValue="0" />
+						</p:selectManyCheckbox>
 
-						<p:outputLabel value="Periodo" />
-						<h:form>
-							<p:selectManyCheckbox id="basic"
-								value="#{voluntarioController.selectedConsoles}" layout="grid"
-								columns="3">
-								<f:selectItem itemLabel="Manha" itemValue="0" />
-								<f:selectItem itemLabel="Tarde" itemValue="1" />
-								<f:selectItem itemLabel="Noite" itemValue="2" />
-							</p:selectManyCheckbox>
-						</h:form>
+
+						<p:selectManyCheckbox id="periodos" layout="grid" columns="1"
+							value="#{voluntarioController.voluntarioModel.disponibilidadePeriodos}">
+							<f:selectItem itemLabel="Manha" itemValue="0" />
+							<f:selectItem itemLabel="Tarde" itemValue="1" />
+							<f:selectItem itemLabel="Noite" itemValue="2" />
+						</p:selectManyCheckbox>
 
 						<p:commandButton value="Salvar" id="commandButton-salvar"
 							icon="ui-icon-gear"
