--- a/src/main/webapp/cadastrarONG.xhtml
+++ b/src/main/webapp/cadastrarONG.xhtml
@@ -17,7 +17,7 @@
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Cadastro de ONG">
 
-				<h:form id="form-cadastro">
+				<h:form id="form-cadastro" enctype="multipart/form-data">
 
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
@@ -115,19 +115,15 @@
 						<br />
 
 						<p:outputLabel value="Logo da ONG" />
-						<h:form enctype="multipart/form-data">
-							<p:growl id="messages" showDetail="true" />
-							<p:fileUpload value="#{ongController.ongModel.logo}"
-								mode="simple" label="Escolher" skinSimple="true" />
-						</h:form>
-
+						<p:fileUpload id="foto" mode="simple"
+							value="#{ongController.uploadedFile}" />
 						<p:separator />
 						<br />
 
 						<p:outputLabel value="Causas" />
 						<p:selectManyCheckbox id="basic"
 							value="#{ongController.ongModel.causas}" layout="grid"
-							columns="3">
+							columns="2">
 							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
 							<f:selectItem itemLabel="Saude" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
@@ -145,10 +141,10 @@
 							<f:selectItem itemLabel="Outras" itemValue="13" />
 						</p:selectManyCheckbox>
 
+
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear"
-							actionListener="#{ongController.salvarNovaONG}"
-							update="panelGrid-campos-form" />
+							icon="ui-icon-gear" action="#{ongController.salvarNovaONG}"
+							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
 
