--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -20,17 +20,12 @@
 		<ui:include src="/template/headerInicial.xhtml" />
 	</div>
 
-	<div id="content" style="margin-left: 10%; margin-top: 5%;">
+	<div id="content">
 		<ui:insert name="content">
-			<div id="numeros" style="width:70%;">
-				<h:panelGrid columns="2" >
 
-					<p:graphicImage url="/resources/imagens/voluntariado.png"
-						width="250" height="200" />
-						<p:outputLabel value="Login" />
+			<p:graphicImage url="/resources/imagens/inicial.jpg" width="100%"
+				height="800" />
 
-				</h:panelGrid>
-			</div>
 		</ui:insert>
 	</div>
 
