--- a/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarEvento.xhtml
@@ -15,7 +15,7 @@
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Cadastro de Eventos Beneficientes">
 
-				<h:form id="form-cadastro-evento">
+				<h:form id="form-cadastro-evento" enctype="multipart/form-data">
 
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
@@ -59,17 +59,14 @@
 							required="true"
 							requiredMessage="O campo email é de preenchimento obrigatório" />
 
-						<p:outputLabel value="Banner do evento" />
-						<h:form enctype="multipart/form-data">
-							<p:growl id="messages" showDetail="true" />
-							<p:fileUpload value="#{fileUploadView.file}" mode="simple"
-								skinSimple="true" />
-						</h:form>
+						<p:outputLabel value="Banner do evento" for="foto" />
+						<p:fileUpload id="foto" mode="simple"
+							value="#{eventoController.uploadedFile}" />
 
 						<p:outputLabel value="Causas" />
 						<p:selectManyCheckbox id="basic"
 							value="#{eventoController.eventoModel.causas}" layout="grid"
-							columns="3">
+							columns="2">
 							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
 							<f:selectItem itemLabel="Saude" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
@@ -78,8 +75,7 @@
 							<f:selectItem itemLabel="Idosos" itemValue="5" />
 							<f:selectItem itemLabel="Educação" itemValue="6" />
 							<f:selectItem itemLabel="Defesa de direitos" itemValue="7" />
-							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte"
-								itemValue="8" />
+							<f:selectItem itemLabel="Cultura, Esporte e/ou Arte" itemValue="8" />
 							<f:selectItem itemLabel="Crianças/Jovens" itemValue="9" />
 							<f:selectItem itemLabel="Consumo Consciente" itemValue="10" />
 							<f:selectItem itemLabel="Capacitação Profissional" itemValue="11" />
@@ -87,11 +83,10 @@
 							<f:selectItem itemLabel="Outras" itemValue="13" />
 						</p:selectManyCheckbox>
 
-
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear"
-							actionListener="#{eventoController.salvarNovoEvento}"
-							update="panelGrid-campos-form" />
+							icon="ui-icon-gear" action="#{eventoController.salvarNovoEvento}"
+							update="panelGrid-campos-form" ajax="false" />
+
 
 					</h:panelGrid>
 
