--- a/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
+++ b/src/main/webapp/sistema/ONG/cadastrarVaga.xhtml
@@ -13,7 +13,8 @@
 <ui:composition template="/template/ONG/layoutBase.xhtml">
 	<ui:define name="content">
 		<p:tabView style="width:50% ;margin:auto;">
-			<p:tab title="Cadastro de Vaga de Voluntariado">
+			<p:tab title="Cadastro de Vaga de Voluntariado"
+				enctype="multipart/form-data">
 
 				<h:form id="form-cadastro">
 
@@ -46,17 +47,14 @@
 							required="true"
 							requiredMessage="O campo email  é de preenchimento obrigatório" />
 
-						<p:outputLabel value="Banner da Vaga" />
-						<h:form enctype="multipart/form-data">
-							<p:growl id="messages" showDetail="true" />
-							<p:fileUpload value="#{fileUploadView.file}" mode="simple"
-								label="Escolher" skinSimple="true" />
-						</h:form>
+						<p:outputLabel value="Banner da Vaga" for="foto" />
+						<p:fileUpload id="foto" mode="simple"
+							value="#{vagaController.uploadedFile}" />
 
 						<p:outputLabel value="Causas" />
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
-							layout="grid" columns="3">
+						<p:selectManyCheckbox id="causas"
+							value="#{vagaController.vagaModel.causas}"
+							layout="grid" columns="2">
 							<f:selectItem itemLabel="Pessoas com deficiencia" itemValue="0" />
 							<f:selectItem itemLabel="Saude" itemValue="1" />
 							<f:selectItem itemLabel="Proteção Animal" itemValue="2" />
@@ -77,9 +75,9 @@
 
 						<p:outputLabel value="Habilidades  Necessárias" />
 
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
-							layout="grid" columns="3">
+						<p:selectManyCheckbox id="habilidades"
+							value="#{vagaController.vagaModel.habilidades}"
+							layout="grid" columns="2">
 							<f:selectItem itemLabel="Artes/Artesanato" itemValue="0" />
 							<f:selectItem itemLabel="Comunicação" itemValue="1" />
 							<f:selectItem itemLabel="Dança/Musica" itemValue="2" />
@@ -97,9 +95,9 @@
 
 						<p:outputLabel value="Disponibilidade:" />
 
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
-							layout="grid" columns="3">
+						<p:selectManyCheckbox id="dia"
+							value="#{vagaController.vagaModel.dias}"
+							layout="grid" columns="1">
 							<f:selectItem itemLabel="Segunda-Feira" itemValue="0" />
 							<f:selectItem itemLabel="Terça-Feira" itemValue="1" />
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="2" />
@@ -111,20 +109,17 @@
 
 
 						<p:outputLabel value="Periodo" />
-
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
+						<p:selectManyCheckbox id="periodo"
+							value="#{vagaController.vagaModel.periodos}"
 							layout="grid" columns="3">
 							<f:selectItem itemLabel="Manha" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
 						</p:selectManyCheckbox>
 
-
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear"
-							actionListener="#{vagaController.salvarNovaVaga}"
-							update="panelGrid-campos-form" />
+							icon="ui-icon-gear" action="#{vagaController.salvarNovaVaga}"
+							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
 
