--- a/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
+++ b/src/main/webapp/sistema/Voluntario/cadastrarDoacao.xhtml
@@ -15,7 +15,7 @@
 		<p:tabView style="width:50% ;margin:auto;">
 			<p:tab title="Cadastro de Objeto para Doação">
 
-				<h:form id="form-cadastro">
+				<h:form enctype="multipart/form-data">
 
 					<h:panelGrid id="panelGrid-campos-form" columns="2"
 						cellpadding="10">
@@ -33,18 +33,14 @@
 							value="#{doacaoController.doacaoModel.descricao}" required="true"
 							requiredMessage="O campo descrição é de preenchimento obrigatório" />
 
-
-						<p:outputLabel value="Foto do objeto para doação" />
-						<h:form enctype="multipart/form-data">
-							<p:growl id="messages" showDetail="true" />
-							<p:fileUpload value="#{fileUploadView.file}" mode="simple"
-								skinSimple="true" />
-						</h:form>
+						<p:outputLabel value="Foto do objeto para doação" for="foto" />
+						<p:fileUpload id="foto" mode="simple"
+							value="#{doacaoController.uploadedFile}" />
 
 						<p:outputLabel value="Disponibilidade para retirada:" />
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
-							layout="grid" columns="3">
+						<p:selectManyCheckbox id="dias"
+							value="#{doacaoController.doacaoModel.dias}" layout="grid"
+							columns="2">
 							<f:selectItem itemLabel="Segunda-Feira" itemValue="0" />
 							<f:selectItem itemLabel="Terça-Feira" itemValue="1" />
 							<f:selectItem itemLabel="Quarta-Feira" itemValue="2" />
@@ -54,22 +50,19 @@
 							<f:selectItem itemLabel="Domingo" itemValue="5" />
 						</p:selectManyCheckbox>
 
-
 						<p:outputLabel value="Periodo" />
 
-						<p:selectManyCheckbox id="basic"
-							value="#{cadastrarVoluntarioController.selectedConsoles}"
-							layout="grid" columns="3">
+						<p:selectManyCheckbox id="periodos"
+							value="#{doacaoController.doacaoModel.periodos}" layout="grid"
+							columns="3">
 							<f:selectItem itemLabel="Manha" itemValue="0" />
 							<f:selectItem itemLabel="Tarde" itemValue="1" />
 							<f:selectItem itemLabel="Noite" itemValue="2" />
 						</p:selectManyCheckbox>
 
-
 						<p:commandButton value="Salvar" id="commandButton-salvar"
-							icon="ui-icon-gear"
-							actionListener="#{cadastrarVoluntarioController.SalvarNovaPessoa}"
-							update="panelGrid-campos-form" />
+							icon="ui-icon-gear" action="#{doacaoController.salvarNovaDoacao}"
+							update="panelGrid-campos-form" ajax="false" />
 
 					</h:panelGrid>
 
@@ -78,7 +71,6 @@
 					<p:messages autoUpdate="true" closable="true" severity="error" />
 					<p:messages showDetail="true" autoUpdate="true" closable="true"
 						severity="info" />
-
 
 				</h:form>
 
